--- a/index.html
+++ b/index.html
@@ -13,26 +13,25 @@
                 0
             </div>
 
-            <button class="number">AC</button>
-            <button class="number">+/-</button>
-            <button class="number">%</button>
-            <button class="number">/</button>
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="number">*</button>
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="number">-</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="number">+</button>
-            <button class="number">0</button>
-            <button class="number">.</button>
-            <button class="number">=</button>
-        
+            <button class="operator" value="clear">AC</button>
+            <button class="operator" value="toggle-sign">+/-</button>
+            <button class="operator" value="%">%</button>
+            <button class="operator" value="/">/</button>
+            <button class="number" value="7">7</button>
+            <button class="number" value="8">8</button>
+            <button class="number" value="9">9</button>
+            <button class="operator" value="*">*</button>
+            <button class="number" value="4">4</button>
+            <button class="number" value="5">5</button>
+            <button class="number" value="6">6</button>
+            <button class="operator" value="-">-</button>
+            <button class="number" value="1">1</button>
+            <button class="number" value="2">2</button>
+            <button class="number" value="3">3</button>
+            <button class="operator" value="+">+</button>
+            <button class="number" value="0">0</button>
+            <button class="number" value=".">.</button>
+            <button class="operator" value="=">=</button>
             
         </div>
     </main>
