calculator working for one digit numbers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 0
             </div>
 
-            <button class="operator" value="clear">AC</button>
+            <button id="clear" value="clear">AC</button>
             <button class="operator" value="toggle-sign">+/-</button>
             <button class="operator" value="%">%</button>
             <button class="operator" value="/">/</button>
@@ -31,7 +31,7 @@
             <button class="operator" value="+">+</button>
             <button class="number" value="0">0</button>
             <button class="number" value=".">.</button>
-            <button class="operator" value="=">=</button>
+            <button id="equals" value="=">=</button>
             
         </div>
     </main>
