--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="number" value="3">3</button>
             <button class="operator" value="+">+</button>
             <button class="number" value="0">0</button>
-            <button class="number" value=".">.</button>
+            <button class="number" id="decimal" value=".">.</button>
             <button id="equals" value="=">=</button>
             
         </div>
